# share-app

./: .gitignore  README.md  index.html  package-lock.json  package.json  renovate.json  svelte.config.js  tailwind.config.ts  tsconfig.json  vite.config.js
.github/workflows/: android.yml  build.yml  build_os.yml  publish.yml  release.yml  test_build.yml
scripts/: encode_decode.js
src/: App.svelte  app.css  app.d.ts  app.html  app.postcss  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: desktop.json  main-capability.json  main.json  migrated.json
src-tauri/icons/: icon.icns
src-tauri/src/: clipboard.rs  lib.rs  main.rs  path.rs  settings.rs
src-tauri/src/communication/: message.rs  mod.rs  share_client.rs
src-tauri/src/completion/: mod.rs  request.rs  types.rs
src-tauri/src/util/: app_path.rs  clipboard.rs  mod.rs  settings.rs
src/assets/: arrow.svelte  circle-close.svelte  long-arrow.svelte  plus-sign-svg.svelte  setting-line-icon.svelte
src/lib/: ActionBar.svelte  Connection.svelte  Discuss.svelte  MessageContent.svelte  MessageInput.svelte  MessagesManager.ts  SettingsButton.svelte  SettingsPanel.svelte  User.svelte  Widget.svelte  channel.ts  clickOutside.ts  config.ts  discussStore.js  theme.svelte.ts
src/lib/Autocompletion/: Autocomplete.svelte  type.ts
src/lib/Discuss/: ActionBar.svelte  Discuss.svelte  MessagesManager.svelte.ts  MessagesManager.ts  User.svelte
src/lib/MessageRenderer/: ATag.svelte  ColorTag.svelte  IMGTag.svelte  LinkPreview.svelte  MessageContent.svelte  MessageHistory.ts  MessageInput.svelte  MessageRenderer.svelte  MessageType.ts  metaData.ts
src/lib/Settings/: Settings.svelte  SettingsButton.svelte  SettingsPanel.svelte
src/routes/: +layout.svelte  +layout.ts  +page.svelte
