[package]
name = "app"
version = "0.1.2"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.79"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.2", features = [] }
tauri-cli = {version="1.5.14"}

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.6.8", features = ["path-all", "protocol-asset", "shell-open", "updater", "window-request-user-attention"] }
irc = "1.0.0"
futures = "0.3"
arboard = "3.3"
image = "0.25"
uuid = { version = "1.7.0", features = ["serde", "v4"] }
anyhow = "1.0"
base64 = "0.22"
serde_yaml = "0.9"
chrono = "0.4"
reqwest = { version = "0.12", features = ["blocking", "multipart"] }
scraper = "0.19.0"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
