[package]
name = "app"
version = "0.1.4"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
rust-version = "1.79"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }
tauri-cli = {version="2.0.0-beta"}

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0.0-beta", features = [ "protocol-asset"] }
irc = "1.0.0"
futures = "0.3"
arboard = "3.3"
image = "0.25"
uuid = { version = "1.7.0", features = ["serde", "v4"] }
anyhow = "1.0"
base64 = "0.22"
serde_yaml = "0.9"
chrono = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "multipart", "rustls-tls"] }
scraper = "0.19.0"
tauri-plugin-shell = "2.0.0-beta"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
