[package]
name = "app"
version = "0.1.8"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
rust-version = "1.79"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0", default-features = false , features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0", features = [ "protocol-asset"] }
irc = {version = "1.0", default-features = false, features= ["tls-rust", "channel-lists"] }
futures = {version = "0.3"}
image = {version = "0.25", default-features = false}
uuid = { version = "1.10", features = ["serde", "v4"], default-features = false}
anyhow = "1.0"
base64 = {version = "0.22", default-features = false}
serde_yaml = "0.9"
chrono = {version = "0.4", default-features = false}
reqwest = { version = "0.12", default-features = false, features = ["blocking", "multipart", "rustls-tls"] }
scraper = {version = "0.20", default-features = false}
tauri-plugin-shell = {version = "2.0", default-features = false}
thiserror = "1.0"

[target.'cfg(not(target_os="android"))'.dependencies]
arboard = { version = "3.4", optional = true }

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-updater = "2.0.2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
clipboard = ["arboard"]

[profile.release]
panic = "abort" # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true # Enables link to optimizations
opt-level = "s" # Optimize for binary size
strip = true # Remove debug symbols
